blocks/cards/cards.css
/* ... */
.cards-wrapper .cards div {
  max-width: 230px;
}

/* DNA */
.section.dna{
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.section.dna .cards.mobile {
  display:none;
}

.section.dna.cards-container{
  padding:0;
}

.section.dna.cards-container .cards-card-body {
  grid-column: span 1;
  display: flex;
  flex-direction: column;
  background-color: white;
  color:var(--text-color);
  border-radius: 10px;
  padding: 1rem;
  margin: 0;
  min-height: 100%;
}

.section.dna > div {
 padding:0;
}

.section.dna .cards-wrapper .cards div {
  max-width:100%;
}

/* First default content: h1 title, top buttons, text */
.cards-container.dna .default-content-wrapper {
  position: relative;
  width: 100%;
  max-width: 1400px;
  margin: 0 auto;
  padding: 2rem 1rem 4rem;
  justify-content: center;
  align-items: center;
  display:flex;
  flex-direction: column;
}

.cards-container.dna .default-content-wrapper .trademark{
  font-size: 0.35em;
  position: relative;
  top: -0.7em;
  left: -0.4em;
}

.cards-container.dna .default-content-wrapper .superscript{
  font-size: 0.5em;
  position: relative;
  top: -0.4em;
  left: 0;
}

/* .section.dna.cards-container .default-content-wrapper:first-of-type p {
  font-size: 1.6rem;
  text-align: center;
} */

.section.dna.cards-container .default-content-wrapper p {
  color:var(--text-color);
  font-size:0.8rem;
  margin-bottom: 1.5rem;
}

.section.dna.cards-container .default-content-wrapper p:last-child {
  max-width: 950px;
  width: 100%;
  margin: 0 auto;
  padding-top: 1rem;
  position: relative;
}

/* button */
.section.dna.cards-container .default-content-wrapper > p:first-of-type:has(> a) {
  position: relative;
  display: flex;
  gap: 10px;
  margin: 0 1rem;
  align-self: flex-end; 
}

.section.dna.cards-container .default-content-wrapper > p:first-of-type a {
  display: inline-block;
  padding: 0.6rem 1rem;
  background-color: var(--button-gray-color);
  color: var(--text-color);
  border-radius: 32px;
  font-weight: 700;
  font-size: 1rem;
}

.section.dna.cards-container .default-content-wrapper > p:first-of-type a:hover {
  background-color: var(--button-gray-hover-color);
  text-decoration: none;
}

.section.dna.cards-container .default-content-wrapper > p:first-of-type a:active {
  background-color: var(--button-gray-active-color);
  text-decoration: none;
}

/* h1  h3 */
.section.dna.cards-container h1 {
  width: 100%;
  max-width: none;
  text-align: center;
  margin: 0 auto;
  font-weight: 400;
  font-size: 3.2rem;
  padding:0.3em 0;
  color:var(--text-color);
}

.section.dna.cards-container .default-content-wrapper h3 {
  font-family: ui-sans, "Helvetica Neue", Arial, sans-serif;
  color:var(--text-color);
  font-weight: 400;
  font-size:1.6rem;
  -webkit-font-smoothing: antialiased;
}

/* cards block */
.section.dna.cards-container .cards > ul {
  max-width: 1200px;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
  gap: 20px;
  padding: 0 1rem;
  margin: 0 auto;
  list-style: none;
}

.section.dna.cards-container .cards > ul > li {
  display: contents;
}

/* cards title */
.section.dna.cards-container .cards .cards-card-body .title {
  margin: 1rem 0.2rem 0;
  min-height: 80px;
  max-height:120px;
 }

 .section.dna.cards-container .cards .cards-card-body .title h2 {
 font-size: 1.35rem;
 font-weight:700;
 font-family: ui-sans, "Helvetica Neue", Arial, sans-serif ;
 line-height: 1.5rem;
 margin:0;
}

.section.dna.cards-container .cards-card-body .title .trademark {
  font-size: 0.5em;
  vertical-align: top;
  position: relative;
  top: -0.7em;
  left: -0.2em;
}

/* cards product */
.section.dna.cards-container .cards-card-body .product img {
  aspect-ratio: auto;
  width:80%;
  margin-bottom:1.5rem;
  min-height:150px;
}

.section.dna.cards-container .cards-wrapper .cards-card-body .product .button-container{
  margin-top:0.5rem;
  margin-bottom:1rem;
}

.section.dna.cards-container .cards-wrapper .cards-card-body .product .button-container a {
  margin:0;
  padding:0.8rem 0;
  width:90%;
  font-size:1.25em
}

/* price */
.section.dna.cards-container .cards-card-body .product .formatted-price {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  margin: 0;
  text-align: center;
  font-weight: 700;
}

.section.dna.cards-container .cards-card-body .prdocut .formatted-price strong {
  display: inline-block;
  margin-bottom: 0.2em;
}

.section.dna.cards-container .cards-card-body .product .price-amount {
  display:flex;
  margin: 0 0.3em;
  align-items: flex-start;
}

.section.dna.cards-container .cards-card-body .product .formatted-price .dollar-sign {
  font-size: 2.2rem;
  align-self: flex-start;
  display: inline-block;
  position: relative;
  transform: translateY(50%);
}

.section.dna.cards-container .cards-card-body .product .formatted-price .price {
  font-size: 3.6rem;
  font-weight: bold;
  line-height: 1;
  position: relative;
  transform: translateY(-10%);
}

.section.dna.cards-container .cards-card-body .product .price-asterisk {
  font-size: 2rem;
  position: relative;
  transform: translateY(10%);
}

/* sale */
.section.dna.cards-container .cards-card-body .product .formatted-price .sale {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  line-height: 1.2;
  transform: translateY(5%);
}

.section.dna.cards-container .cards-card-body .product .formatted-price .sale .original-price {
  display: inline-block;
  text-decoration: line-through;
}

.section.dna.cards-container .cards-card-body .product .formatted-price .sale .savings {
  display: inline-block;
  font-size: 1em;
  color: var(--text-green-color);
}

.section.dna.cards-container .cards-card-body .product .formatted-price .sale .savings-off-style {
  display: none;
}

.section.dna.cards-container .cards-wrapper .cards .cards-card-body .expand a {
  font-weight: 600;
  text-decoration:underline;
}
/* ... */

